examples/sse-tap/envoy.yaml
static_resources:
  listeners:
    - name: sse-tap
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: sse_tap
                http_filters:
                  - name: sse-tap
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                      dynamic_module_config:
                        name: sse-tap
                      filter_name: sse-tap
                      filter_config:
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: '{}'
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: sse_tap
                  virtual_hosts:
                    - name: upstream
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: upstream
                            timeout: 60s

  clusters:
    - name: upstream
      connect_timeout: 5s
      type: STATIC
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 8080 }

admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
